# faer-precond

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: publish.yml
benches/: precond.rs
examples/: approx_inverse.rs  block_jacobi.rs  ic0.rs  ilu0.rs  ilutp.rs  jacobi.rs  poly.rs  solve_precond.rs  speedup.rs  ssor.rs
src/: block_jacobi.rs  jacobi.rs  lib.rs
src/adapters/: mod.rs  solve.rs
src/fsai/: apply.rs  build.rs  mod.rs
src/ic0/: apply.rs  mod.rs  numeric.rs  symbolic.rs
src/ict/: apply.rs  mod.rs  numeric.rs
src/ilu0/: apply.rs  mod.rs  numeric.rs  symbolic.rs
src/iluk/: apply.rs  mod.rs  numeric.rs  symbolic.rs
src/ilutp/: apply.rs  mod.rs  numeric.rs
src/poly/: apply.rs  build.rs  mod.rs
src/spai/: apply.rs  build.rs  mod.rs
src/ssor/: apply.rs  build.rs  mod.rs
src/util/: diag_split.rs  mod.rs  spd_bounds.rs
tests/: integration.rs
